syntax = "proto3";

package crudpb;

option go_package="crud-grpc-gofiber/crudpb;crudpb";


service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc AddUser (AddUserRequest) returns (AddUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
}

message GetUserRequest {
    int32 id = 1;
}

message GetUserResponse {
    string username = 1;
    string email = 2;
    string full_name = 3;
    string created_at = 4;
    string updated_at = 5;
}

message AddUserRequest {
  string username = 1;
  string email = 2;
  string full_name = 3;
}

message AddUserResponse {
  string status = 2;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  string status = 2;
}

message UpdateUserRequest {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
}

message UpdateUserResponse {
  string status = 2;
}